--- a/hotel/parul.css
+++ b/hotel/parul.css
@@ -16,6 +16,7 @@ h1{
 label {
 	font-family: "Century", Times, serif;
 	font-weight: bold;
-    color: lovender;
+	font-size: 20;
+    color: gold;
     
 }
