--- a/hotel/parul.css
+++ b/hotel/parul.css
@@ -20,3 +20,8 @@ label {
     color: gold;
     
 }
+p {
+	font-family: "Century", Times, serif;
+	font-weight: bold;
+	font-size: 20;
+    color: lovender;
