--- a/hotel/parul.css
+++ b/hotel/parul.css
@@ -23,5 +23,5 @@ label {
 p {
 	font-family: "Century", Times, serif;
 	font-weight: bold;
-	font-size: 20;
-    color: lovender;
+	font-size: 30;
+    color: black;
